--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "countdowntimer",
+  "homepage": "https://Sm1l.github.io/CountdownTimer/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +9,9 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "component": "generate-react component"
+    "component": "generate-react component",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "generate-react-cli": "^8.3.0",
