--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "framer-motion": "^10.16.4",
     "generate-react-cli": "^8.3.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
